--- a/index.css
+++ b/index.css
@@ -7,9 +7,7 @@
     background-color: black;
     color: white;
     font-size: 1rem;
-    /* position: relative; */
 }
-
 
 i:hover {
     color: red;
@@ -18,10 +16,9 @@ i:hover {
 ::-webkit-scrollbar {
     width: 5px;
     height: 8px;
-    background-color: #aaa; /* or add it to the track */
-    }
+    background-color: #aaa;
+}
     
-/* Add a thumb */
 ::-webkit-scrollbar-thumb {
 background: #000;
 }
@@ -50,11 +47,10 @@ background: #000;
     border-bottom: 3px solid white;
     width: 18%;
     height: 100%;
-    margin-right: 1px;
-    
+    margin-right: 1px;   
 }
 
-.nav-bar {
+#navbar {
     display: flex;
     flex-direction: column;
     height: 16%;
@@ -71,15 +67,13 @@ background: #000;
     height: 50%;
 }
 
-#homebutton {
+#homeButton {
     border-top-right-radius: 10px;
-    /* font-family: 'Preahvihear', sans-serif; */
 }
 
 #searchbar {
     border-bottom-right-radius: 10px;
     border: none;
-    /* font-family: 'Preahvihear', sans-serif; */
 }
 
 #search {
@@ -92,7 +86,7 @@ background: #000;
     font-weight: bolder;
 }
 
-.searchiconclicked {
+.button-clicked {
     background-color: white;
     color: red;
 }
@@ -113,7 +107,6 @@ background: #000;
     cursor: pointer;
 }
 
-
 .navbar-button:hover {
     background-color: white;
     color: black;
@@ -121,29 +114,23 @@ background: #000;
 
 .navbar-button:hover i{
     background-color: white;
-    color: black;
+    color: red;
 }
 
 .navbar-button:hover span {
     background-color: white;
-    color: black;
     color: red;
 }
 
 .iconspacing {
     margin: 5%;
-    /* background-color: green; */
     margin-right: 6%;
-    /* margin: auto 6%; */
-    /* background-color: rgb(17, 16, 16); */
 }
 
 .playlist {
     display: flex;
     flex-direction: column;
     margin-top: 10%;
-    /* height: 82%; */
-    
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
@@ -187,35 +174,20 @@ background: #000;
     padding-bottom: 5%;
     background-color: rgb(56, 55, 55);
     border-radius: 5px;
-    /* height: 50px; */
-    
-    /* text-align: center;
-    justify-content: center;
-    align-items: center; */
     font-size: 0.9rem;
     cursor: pointer;
     width: 100%;
-    /* transition: 0.15s; */
 }
 
 .liked:hover {
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
     background-color: white;
-    color: black;
     color: red;
-    /* border: 1px solid red; */
-    /* font-family: 'Montserrat', serif; */
     font-weight: 520;
-    /* text-align: center; */
     align-items: center;
     justify-content: center;
-    /* padding-left: 0; */
-font-family: 'Kalam', cursive;
-/* transform: scale(1.02); */
+    font-family: 'Kalam', cursive;
     transition: 0.15s;
-    font-size: 1.15rem;
-/* font-family: 'Lobster', cursive;  */
+    font-size: 1.05rem;
 }
 
 /* ************SECOND SECTION******************* */
@@ -227,22 +199,14 @@ font-family: 'Kalam', cursive;
     width: 64%;
     height: 100%;
     z-index: 3;
-    border-bottom: 3px solid rgb(67, 67, 170);
-    border-bottom: 3px solid antiquewhite;
     border-bottom: 3px solid white;
-    /* border-top-left-radius:5px;
-    border-top-right-radius: 5px; */
     background-color: rgb(17, 16, 16);
-    /* border-top-left-radius: 20px;
-    border-top-right-radius: 20px; */
     border-left: 1px solid black;
     border-right: 1px solid black;
     border-radius: 10px;
 }
 
 .name {
-    background-color: rgb(67, 67, 170);
-    background-color: rgb(183, 156, 45);
     background-color: #fff;
     width: 100%;
     display: flex;
@@ -252,11 +216,7 @@ font-family: 'Kalam', cursive;
     font-size: 1.3rem;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    color: white;
-    color: #000;
-    color: darkblue;
-    color: red;
-    
+    color: red;    
     font-weight: bolder;
     font-family: 'Marcellus', serif;
 }
@@ -280,57 +240,38 @@ font-family: 'Kalam', cursive;
 
 .cards {
     margin-bottom: 2%;
-    background-color: rgb(17, 16, 16);
-    /* background-color: white; */
-    
-}
-
-.h-100 {
+    background-color: rgb(17, 16, 16); 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
     background-color: transparent;
-    /* border: 0.1px solid rgb(67, 67, 170); */
-    /* width: 100%; */
-    padding: 0;
-    
+    padding: 0;  
 }
 
-.h-100:hover :not(.masterPlayCover){
+.cards:hover :not(.masterPlayCover){
     cursor: pointer;
     opacity: 0.7;
     transition: 0.15s;
     transform: scale(1.02);
 }
 
-.h-100:hover i{
+.cards:hover i{
     visibility: visible;
-    z-index: 6;
-    
+    z-index: 1;   
 }
 
-.h-100 i:hover {
+.cards i:hover {
     color: rgb(255, 0, 0);
-    /* color: white; */
-    /* color: rgb(124, 170, 106); */
 }
 
 
 .masterPlayCover {
-    /* width: 100%; */
     position: absolute;
     background-color: transparent;
     text-align: center;
-    /* right: 0; */
     cursor: pointer;
-    /* font-size: 50px; */
-    /* color: rgb(103, 255, 43); */
-    color: rgb(255, 255, 255);
-    color: antiquewhite;
     color: white;
-    /* visibility: hidden; */
 }
 
 .playVisible {
@@ -351,7 +292,6 @@ font-family: 'Kalam', cursive;
 }
 
 .music-name {
-    /* width: 100%; */
     padding: 5%;
     font-weight: bolder;
     font-family: 'Marcellus', serif;
@@ -359,27 +299,15 @@ font-family: 'Kalam', cursive;
 }
 
 .duration {
-    /* width: 100%; */
     padding: 3%;
     font-size: 0.70rem;
-    /* font-weight:bold; */
-    background-color: rgb(67, 67, 170);
-    background-color: antiquewhite;
     background-color: rgba(255, 255, 255, 0.892);
-    /* background-color: rgb(202, 41, 41); */
     color: black;
-    /* color: red; */
-    /* color: white; */
     font-weight: 501;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
-    /* color: darkblue; */
     border-bottom: 3px solid red;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Roboto Slab', serif;
-    font-family: 'Varela', sans-serif;
     font-family: 'Preahvihear', sans-serif;
-    /* font-family: 'Montserrat', sans-serif; */
 }
 
 
@@ -394,10 +322,7 @@ font-family: 'Kalam', cursive;
     height: 100%;
     position: relative;
     margin: auto 1px;
-    background-color: rgb(17, 16, 16);
     z-index: 3;
-    border-bottom: 3px solid rgb(67, 67, 170);
-    border-bottom: 3px solid antiquewhite;
     border-bottom: 3px solid white;
 }
 
@@ -405,10 +330,7 @@ font-family: 'Kalam', cursive;
     border-radius: 7px;
     height: 16%;
     width: 100%;
-    /* background-color: rgb(17, 16, 16); */
-    /* background-color: white; */
     color: white;
-    /* color: black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -463,7 +385,6 @@ font-family: 'Kalam', cursive;
     right: 0;
     margin: auto 5%;
     background-color: rgb(17, 16, 16);
-    /* background-color: white; */
 }
 
 .covericon i {
@@ -484,11 +405,8 @@ font-family: 'Kalam', cursive;
     color: white;
     display: flex;
     justify-content: center;
-    /* text-align: center; */
     align-items: center;
     flex-direction: column; 
-    /* background-color: white; */
-    /* color black; */
 }
 
 .footersong {
@@ -499,9 +417,6 @@ font-family: 'Kalam', cursive;
     left: 0;
     margin: auto 1%;
     height: 90%;
-    /* width: 15vw; */
-    /* background-color: white; */
-    /* color: black; */
 }
 
 .footersong img {
@@ -513,7 +428,6 @@ font-family: 'Kalam', cursive;
 
 .footersongname {
     margin: 5px;
-    /* background-color: green; */
 }
 
 #masterSongName {
@@ -524,7 +438,6 @@ font-family: 'Kalam', cursive;
     margin: 5px;
     font-size: 0.8rem;
     cursor: pointer;
-    /* background-color: green; */
 }
 
 .controls {
@@ -562,8 +475,6 @@ font-family: 'Kalam', cursive;
 #myVolumeBar{
     width: 40%;
     background-color: white; 
-    accent-color: rgb(67, 67, 170);
-    accent-color: antiquewhite;
     accent-color: red;
     height: 2px;
     cursor: pointer;
@@ -590,19 +501,12 @@ font-family: 'Kalam', cursive;
     flex-direction: row;
     align-items: center;
     width: 45vw;
-    /* border-radius: 4px; */
     bottom: 0;
-    /* background-color: transparent; */
-    /* background-color: green; */
 }
 
 #myProgressBar{
-    /* display: flex; */
     width: 84%;
-    /* margin: auto 2%; */
     cursor: pointer;
-    accent-color: rgb(67, 67, 170);
-    accent-color: antiquewhite;
     accent-color: red;
     height: 1px;
 }
@@ -614,7 +518,6 @@ font-family: 'Kalam', cursive;
     text-align: end;
     margin-right: 1%;
     color: rgb(246, 231, 231);
-    /* background-color: blue; */
     font-family: 'Preahvihear', sans-serif;
 }
 
@@ -623,84 +526,39 @@ font-family: 'Kalam', cursive;
     margin-left: 1%;
     width: 7%;
     color: rgb(246, 231, 231);
-    /* background-color: blue; */
     font-family: 'Preahvihear', sans-serif;
 }
 
 #masterPlay {
     font-size: 2.2rem;
-    /* margin-bottom: 1%; */
     color: red;
 }
 
-#alertBoxDiv {
-    z-index: 4;
-    /* height: 50%;
-    width: 50%; */
-    margin: auto;
-    background-color: green;
-    /* position: absolute; */
-    /* top: 0; */
-    justify-content: center;
-    align-items: center;
-    /* display: flex; */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    
-}
+/* **********Create Playlist POPUP************* */
 
 #alertBox {
-	/* position: absolute; */
-	/* top: 20%; */
-	/* bottom: 60%; */
 	left: 50%; 
     top: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
-	/* width: 15%; */
-    /* height: 20%; */
-    /* justify-content: center;
-    align-items: center;
-    text-align: center; */
-    /* display: flex; */
-	/* height: 15%; */
-	background-color: white;
-    background-color: grey;
-    background-color: rgb(140, 0, 255);
-    background-color: rgb(67, 67, 170);
     background-color: white;
-    color: red;
 	border-radius: 10px;
 	padding: 1rem;
 	z-index: 4;
-	/* text-align: center; */
-	color: black;
     color: red;
     transition: 0.15s;
-    /* display: flex;
-    flex-direction: column; */
-    /* width: 100%; */
-    /* height: 100%; */
     width: 30%;
-    /* height: 10%; */
-    border: 2px solid rgb(30, 241, 30);
     border: 2px solid red;
-    /* padding-bottom: 2%; */
-    /* display: none; */
 }
 
 #alertClose {
 	position: absolute;
-    /* display: flex; */
 	right: 0;
 	top: 0;
 	background-color: rgba(0, 0, 0, .8);
 	width: 100vw;
 	height: 100vh;
     z-index: 3;
-    /* display: none; */
 }
 
 .hideAlerts {
@@ -712,15 +570,8 @@ font-family: 'Kalam', cursive;
 }
 
 .inputDivClass {
-    /* background-color: rgb(17, 16, 16); */
-    background-color: grey;
-    background-color: rgb(140, 0, 255);
-    background-color: rgb(67, 67, 170);
     background-color: red;
-    /* display: flex; */
     justify-content: center;
-    /* align-items: center; */
-    /* text-align: center; */
     position: relative;
     border: none;
     margin: 2% auto;
@@ -729,26 +580,15 @@ font-family: 'Kalam', cursive;
 #inputClassName {
     padding-left: 5%;
     font-family: 'Marcellus', serif;
-    /* color: white; */
-    /* background-color: #000; */
     background-color: white;
     color: black;
-    /* padding-left: 5%; */
-    /* text-align: center; */
     width: 100%;
-    /* margin-top: 1%; */
-    /* border-radius: 0.4rem; */
     font-weight: bolder;
-    /* margin-right: 2%; */
     height: 2.3rem;
-    border: 1px solid rgb(30, 241, 30);
     border: 1px solid red;
-    /* background-color: red; */
 }
 
 .textMsgName {
-    background-color: rgb(17, 16, 16);
-    /* background-color: rgb(67, 67, 170); */
     background-color: transparent;
     color: red;
     font-size: 0.9rem;
@@ -756,71 +596,26 @@ font-family: 'Kalam', cursive;
     font-family: 'Marcellus', serif;
     padding: 1%;
     font-weight: bolder;
-    /* height: 2rem; */
-}
-
-.closeButtonDiv {
-    width: 100%;
-    background-color: rgb(17, 16, 16);
-    text-align: end;
-    padding-right: 1%;
-}
-
-#closeButton {
-    /* position: absolute; */
-    /* right: 0; */
-    cursor: pointer;
-    color: rgb(67, 67, 170);
-    background-color: rgb(17, 16, 16);
-}
-
-#closeButton:hover {
-    color: red;
 }
 
 #acceptName {
-    background-color: transparent;
-    background-color: rgb(30, 241, 30);
-    background-color: rgb(67, 67, 170);
     background-color: red;
-    /* color: rgb(30, 241, 30); */
-    /* color: green; */
-    /* color: rgb(67, 67, 170); */
-    /* color: #000; */
-    /* color: white;  */
     cursor: pointer;
     position: absolute;
     right: 0;
     bottom: 0;
-    /* height: 100%;
-    text-align: center;
-    align-items: center;
-    justify-content: center; */
-    /* padding-right: 10%; */
     font-size: 1.1rem;
-    /* margin: 3% auto; */
     text-align: center;
-    /* width: 25%; */
     padding: 1%;
-    /* border-radius: 0.4rem; */
     width: 15%;
-    /* position: absolute; */
-    /* background-color: #000; */
     height: 2.28rem;
-    /* justify-content: center;
-    text-align: center;
-    align-items: center; */
-    /* margin-top: 0.1rem; */
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid rgb(30, 241, 30);
-    /* padding: 10%; */
 }
 
 #acceptName:hover {
-    /* color: rgb(30, 241, 30); */
-    /* color: rgb(67, 67, 170); */
     color: white;
     background-color: rgb(30, 241, 30);
 }
