--- a/index.css
+++ b/index.css
@@ -11,6 +11,8 @@
 
 i:hover {
     color: red;
+    color: #1b95cf;
+    color: darkblue;
 }
 
 ::-webkit-scrollbar {
@@ -21,6 +23,7 @@ i:hover {
     
 ::-webkit-scrollbar-thumb {
 background: #000;
+/* background-color: white; */
 }
 
 /* ***********HEADER************** */
@@ -45,6 +48,8 @@ background: #000;
     flex-direction: column;
     background-color: rgb(17, 16, 16);
     border-bottom: 3px solid #870d19;
+    border-bottom: 3px solid #1b95cf;
+    border-bottom: 3px solid white;
     width: 18%;
     height: 100%;
     margin-right: 1px;   
@@ -120,6 +125,7 @@ background: #000;
 .button-clicked {
     background-color: white;
     color: red;
+    color: #1b95cf;
 }
 
 .hidesearchbar {
@@ -141,16 +147,19 @@ background: #000;
 .navbar-button:hover {
     background-color: white;
     color: black;
+    color: #1b95cf;
 }
 
 #homeButton:hover {
     background-color: white;
     color: black;
+    color: #1b95cf;
 }
 
 .navbar-button:hover i{
     background-color: white;
     color: red;
+    color: #1b95cf;
 }
 
 .navbar-button:hover span {
@@ -158,6 +167,7 @@ background: #000;
     color: red; */
     background-color: white;
     color: red;
+    color: #1b95cf;
     font-weight: 520;
     align-items: center;
     justify-content: center;
@@ -168,7 +178,7 @@ background: #000;
 
 .iconspacing {
     margin: 5%;
-    margin-right: 6%;
+    margin-right: 5%;
 }
 
 .playlist {
@@ -178,6 +188,7 @@ background: #000;
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
+    /* background-color: #1b95cf; */
 }
 
 .subheader {
@@ -186,7 +197,14 @@ background: #000;
     color: white;
     width: 100%;
     margin-bottom: 3%;
+    background-color: #1b95cf;
+    /* background-color: #14bbf3; */
 }
+
+.subheader i {
+    background-color: #1b95cf;
+}
+
 
 .libraries {
     display: flex;
@@ -208,7 +226,7 @@ background: #000;
     right: 0;
     margin-right: 15%;
     cursor: pointer;
-    background-color: #000;
+    /* background-color: #000; */
 }
 
 .liked {
@@ -226,6 +244,7 @@ background: #000;
 .liked:hover {
     background-color: white;
     color: red;
+    color: #1b95cf;
     font-weight: 520;
     align-items: center;
     justify-content: center;
@@ -247,7 +266,7 @@ background: #000;
     background-color: rgb(17, 16, 16);
     border-left: 1px solid black;
     border-right: 1px solid black;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 .name {
@@ -260,7 +279,8 @@ background: #000;
     font-size: 1.3rem;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    color: red;    
+    color: red;  
+    color: #1b95cf;  
     font-weight: bolder;
     font-family: 'Marcellus', serif;
 }
@@ -307,6 +327,8 @@ background: #000;
 
 .cards i:hover {
     color: rgb(255, 0, 0);
+    color: #1b95cf;
+    color: #14bbf3;
 }
 
 
@@ -324,6 +346,13 @@ background: #000;
 
 .colorRed {
     color: rgb(255, 0, 0);
+    color: #14bbf3;
+    /* color: darkblue; */
+    /* color: #1b95cf; */
+}
+
+.colorDarkblue {
+    color: darkblue;
 }
 
 .card-img-top {
@@ -351,6 +380,7 @@ background: #000;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     border-bottom: 3px solid red;
+    border-bottom: 3px solid #1b95cf;
     font-family: 'Preahvihear', sans-serif;
 }
 
@@ -367,7 +397,10 @@ background: #000;
     position: relative;
     margin: auto 1px;
     z-index: 3;
+    /* background-color: #1b95cf; */
     border-bottom: 3px solid #870d19;
+    border-bottom: 3px solid #1b95cf;
+    border-bottom: 3px solid white;
     /* background-color: rgb(56, 55, 55); */
     background-color: rgb(17, 16, 16);
 }
@@ -384,6 +417,7 @@ background: #000;
     width: 100%;
     color: black;
     color: white;
+    /* color: #1b95cf; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -422,6 +456,7 @@ background: #000;
 
 .covermusicname {
     background-color: rgb(17, 16, 16);
+    /* color: #1b95cf; */
 }
 
 
@@ -430,6 +465,7 @@ background: #000;
     font-size: 22px;
     font-weight: bolder;
     background-color: rgb(17, 16, 16);
+    /* color: #1b95cf; */
 }
 
 .covericon{
@@ -438,6 +474,7 @@ background: #000;
     right: 0;
     margin: auto 5%;
     background-color: rgb(17, 16, 16);
+    /* padding: 1%; */
 }
 
 .covericon i {
@@ -460,6 +497,7 @@ background: #000;
     justify-content: center;
     align-items: center;
     flex-direction: column; 
+    background-color: #1b95cf;
 }
 
 .footersong {
@@ -470,6 +508,7 @@ background: #000;
     left: 0;
     margin: auto 1%;
     height: 90%;
+    background-color: #1b95cf;
 }
 
 .footersong img {
@@ -481,16 +520,19 @@ background: #000;
 
 .footersongname {
     margin: 5px;
+    background-color: #1b95cf;
 }
 
 #masterSongName {
     font-size: 0.8rem;
+    background-color: #1b95cf;
 }
 
 .footcovericon {
     margin: 5px;
     font-size: 0.8rem;
     cursor: pointer;
+    background-color: #1b95cf;
 }
 
 .controls {
@@ -500,16 +542,19 @@ background: #000;
     justify-content: center;
     align-items: center;
     margin-bottom: 0.3%;
+    background-color: #1b95cf;
 }
 
 .controls .fas {
     cursor: pointer;
     margin: auto 9px;
     font-size: 1.6rem;
+    background-color: #1b95cf;
+    /* color: white; */
 }
 
 .controls .smallicon {
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin: auto 1%;
 }
 
@@ -523,17 +568,20 @@ background: #000;
     justify-content: center;
     flex-direction: row;
     align-items: center;
+    background-color: #1b95cf;
 }
 
 .volumebar i{
     margin: auto 3%;
+    background-color: #1b95cf;
 }
 
 #myVolumeBar{
     width: 40%;
     background-color: white; 
     accent-color: red;
-    height: 2px;
+    accent-color: white;
+    height: 3px;
     cursor: pointer;
     right: 0;
     position: absolute;
@@ -546,11 +594,16 @@ background: #000;
 }
 
 .volumeiconmuted {
-    color: red;;
+    color: red;
+    color: darkblue;
+    /* color: #1b95cf; */
+    /* color: #1b95cf; */
 }
 
 .volume-icon:hover {
-    color: red;
+    /* color: red;
+    color: #1b95cf; */
+    color: darkblue;
 }
 
 .timebar {
@@ -559,13 +612,16 @@ background: #000;
     align-items: center;
     width: 45vw;
     bottom: 0;
+    background-color: #1b95cf;
 }
 
 #myProgressBar{
     width: 84%;
     cursor: pointer;
     accent-color: red;
-    height: 1px;
+    height: 3px;
+    accent-color: white;
+    color: darkblue;
 }
 
 #timerstart {
@@ -576,6 +632,7 @@ background: #000;
     margin-right: 1%;
     color: rgb(246, 231, 231);
     font-family: 'Preahvihear', sans-serif;
+    background-color: #1b95cf;
 }
 
 #timerend {
@@ -584,11 +641,13 @@ background: #000;
     width: 7%;
     color: rgb(246, 231, 231);
     font-family: 'Preahvihear', sans-serif;
+    background-color: #1b95cf;
 }
 
 #masterPlay {
-    font-size: 2.2rem;
+    font-size: 2.7rem;
     color: red;
+    color: white;
 }
 
 /* **********Create Playlist POPUP************* */
@@ -603,9 +662,11 @@ background: #000;
 	padding: 1rem;
 	z-index: 4;
     color: red;
+    color: #1b95cf;
     transition: 0.15s;
     width: 25%;
     border: 2px solid red;
+    border: 2px solid #1b95cf;
 }
 
 #librarylistpopup {
@@ -618,9 +679,11 @@ background: #000;
 	padding: 1rem;
 	z-index: 4;
     color: red;
+    color: #1b95cf;
     transition: 0.15s;
     width: 30%;
     border: 2px solid red;
+    border: 2px solid #1b95cf;
     max-height: 50vh;
     overflow-y: auto;
 }
@@ -645,6 +708,7 @@ background: #000;
 
 .inputDivClass {
     background-color: red;
+    background-color: #1b95cf;
     justify-content: center;
     position: relative;
     border: none;
@@ -665,6 +729,7 @@ background: #000;
 .textMsgName {
     background-color: transparent;
     color: red;
+    color: #1b95cf;
     font-size: 0.9rem;
     border-radius: 0.2rem;
     font-family: 'Marcellus', serif;
@@ -674,6 +739,7 @@ background: #000;
 
 #acceptName {
     background-color: red;
+    background-color: #1b95cf;
     cursor: pointer;
     position: absolute;
     right: 0;
@@ -698,6 +764,7 @@ background: #000;
 .playlist-clicked {
     background-color: white;
     color: red;
+    color: #1b95cf;
 }
 
 .hideCards {
