--- a/index.css
+++ b/index.css
@@ -81,7 +81,7 @@ background: #000;
     height: 18%;
     color: white;
     border-radius: 7px;
-    margin-top: 4%;
+    margin-top: 5%;
 }
 
 .navbar-button {
@@ -181,38 +181,34 @@ background: #000;
     margin-right: 5%;
 }
 
-.playlist {
+/* .playlist {
     display: flex;
     flex-direction: column;
+    height: 68%;
     margin-top: 5%;
     overflow-y: auto;
     border-radius: 5px;
     background-color: rgb(17, 16, 16);
-    /* background-color: #1b95cf; */
-}
+    background-color: #1b95cf;
+} */
 
 .subheader {
     display: flex;
     align-items: center;
     color: white;
     width: 100%;
-    margin-bottom: 3%;
+    margin: 10% auto 1%;
+    /* margin-bottom: 3%; */
     background-color: #1b95cf;
     /* background-color: #14bbf3; */
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
 }
 
 .subheader i {
     background-color: #1b95cf;
 }
 
-
-.libraries {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-    width: 100%;
-}
 
 .create {
     display: flex;
@@ -224,24 +220,104 @@ background: #000;
 .iconright {
     position: absolute;
     right: 0;
-    margin-right: 15%;
+    margin-right: 7%;
     cursor: pointer;
     /* background-color: #000; */
 }
 
-.liked {
+#library-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    width: 100%;
+    overflow-y: auto;
+    height: 57%;
+    background-color: rgb(17, 16, 16);
+}
+
+.library-div {
+    display: flex;
+    width: 100%;
+    background-color: rgb(56, 55, 55);
     margin: 1% auto;
+    /* padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%; */
+    background-color: rgb(56, 55, 55);
+    border-radius: 5px;
+    /* font-size: 0.9rem; */
+    cursor: pointer;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+
+
+.library-div:hover {
+    background-color: white;
+}
+
+.library-div:hover span{
+    /* background-color: white; */
+    color: #1b95cf;
+    font-weight: 520;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Kalam', cursive;
+    transition: 0.15s;
+    font-size: 1.05rem;
+}
+
+.library-div:hover i{
+    /* background-color: white; */
+    color: #1b95cf;
+}
+
+.library-div i:hover {
+    color: darkblue;
+}
+
+.fa-ellipsis {
+    /* display: flex;
+    align-items: center; */
+    /* background-color: rgb(56, 55, 55); */
+    background-color: transparent;
+    /* background-color: green; */
+    width: 10%;
+    margin-right: 5px;
+    font-size: 1.2rem;
+    /* height: 100%; */
+    /* align-items: center; */
+    justify-content: center;
+    text-align: center;
+    /* display: flex; */
+}
+
+.liked {
+    /* display: flex; */
+    /* margin: 1% auto;
     padding-left: 5%;
     padding-top: 5%;
     padding-bottom: 5%;
     background-color: rgb(56, 55, 55);
     border-radius: 5px;
     font-size: 0.9rem;
-    cursor: pointer;
-    width: 100%;
+    cursor: pointer; */
+    width: 90%;
+    background-color: transparent;
+    /* background-color: red; */
+    /* height: 100%; */
+    font-size: 0.9rem;
+    padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
-.liked:hover {
+
+
+
+/* .liked:hover {
     background-color: white;
     color: red;
     color: #1b95cf;
@@ -251,7 +327,7 @@ background: #000;
     font-family: 'Kalam', cursive;
     transition: 0.15s;
     font-size: 1.05rem;
-}
+} */
 
 /* ************SECOND SECTION******************* */
 
@@ -395,7 +471,8 @@ background: #000;
     width: 18%;
     height: 100%;
     position: relative;
-    margin: auto 1px;
+    /* margin: auto 1px; */
+    margin-left: 1px;
     z-index: 3;
     /* background-color: #1b95cf; */
     border-bottom: 3px solid #870d19;
@@ -403,6 +480,7 @@ background: #000;
     border-bottom: 3px solid white;
     /* background-color: rgb(56, 55, 55); */
     background-color: rgb(17, 16, 16);
+    border-left: 1px solid black;
 }
 
 .now-playing-info {
@@ -554,7 +632,7 @@ background: #000;
 }
 
 .controls .smallicon {
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: auto 1%;
 }
 
@@ -572,8 +650,9 @@ background: #000;
 }
 
 .volumebar i{
-    margin: auto 3%;
+    margin: auto 6%;
     background-color: #1b95cf;
+    font-size: 1rem;
 }
 
 #myVolumeBar{
@@ -645,7 +724,7 @@ background: #000;
 }
 
 #masterPlay {
-    font-size: 2.7rem;
+    font-size: 2.3rem;
     color: red;
     color: white;
 }
@@ -686,6 +765,23 @@ background: #000;
     border: 2px solid #1b95cf;
     max-height: 50vh;
     overflow-y: auto;
+}
+
+.popup-library {
+    display: flex;
+    width: 100%;
+    background-color: rgb(56, 55, 55);
+    margin: 1% auto;
+    /* padding-left: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%; */
+    background-color: rgb(56, 55, 55);
+    border-radius: 5px;
+    /* font-size: 0.9rem; */
+    cursor: pointer;
+    align-items: center;
+    height: 50px;
+    /* justify-content: center; */
 }
 
 #alertClose {
@@ -775,4 +871,7 @@ background: #000;
     display: block;
 }
 
-
+#repeaticon {
+    font-size: 1rem;
+    /* background-color: green; */
+}
